<resources>
    <string name="app_name">Dungeon Hero</string>
    <string name="app_publisher">G-Level</string>
    <string name="id">id</string>
    <string name="item">item</string>
    <string name="placeholder">placeholder</string>
    <string name="view_holder">viewholder</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="show_skill">show_skill</string>
    <string name="sell_item">sell_item</string>
    <string name="buy_item">buy_item</string>
    <string name="skill">skill</string>
    <string name="use_skill">use_skill</string>
    <string name="potion">potion</string>
    <string name="mail_address">guillaume.gouchon@gmail.com</string>
    <string name="contact_title">Question about </string>
    <string name="contact_support_via">Contact support via&#8230;</string>
    <string name="no_mail_client">There are no email apps installed on your device&#8230;</string>
    <string name="rate_dont_want">No, thanks</string>
    <string name="rate_later">Later</string>
    <string name="rate_now">Rate it now\u00A0!</string>
    <string name="rate_title">Rate the app\u00A0?</string>
    <string name="rate_message">If you enjoy playing %s, please take a moment to rate it.\n\nThanks for your support\u00A0!</string>
    <string name="about_title">About Dungeon Hero</string>
    <string name="about_credits">Game and Music by <a href="http://gouchon.com">Guillaume Gouchon</a>.\n\nMetal Music by Outsider, listen <a href="http://music.gouchon.com">here</a>.\n\nYou can suggest your own quests\non the <a href="https://www.facebook.com/dungeonheroII">Facebook Page</a>.</string>
    <string name="about_contact">Feel free to <a href="mailto:guillaume.gouchon@gmail.com">contact me</a> if you have any issue or question.</string>
    <string name="about_other_sources">The game uses AndEngine game engine by Nicolas Gramlich.\nGame icons by <a href="http://game-icons.net">game-icons.net</a>.\nBackground art by Q_x.\nLauncher icon by <a href="http://sonialahcene.com">Sonia Lahcene</a>.\nDungeon tileset by <a href="http://www.lostgarden.com/2006/07/more-free-game-graphics.html">Daniel Cook</a>.</string>
    <string name="about_version">Version : %s</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="share_subject">Check out %s on Android\u00A0!</string>
    <string name="share_message">This game is cool, you can get it on Google Play\u00A0!\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Options</string>
    <string name="back">Back</string>
    <string name="advertisement">If you enjoy playing this game,\nplease like the <a href="https://www.facebook.com/dungeonheroII">Facebook Page</a> and suggest your own quests\u00A0!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="achievements">Trophees</string>
    <string name="loading_saved_games">Loading...</string>
    <string name="music_volume">Music / Sound</string>
    <string name="music_off">Off</string>
    <string name="music_on">On</string>
    <string name="about">About Dungeon Hero</string>
    <string name="rate_app">Rate the app</string>
    <string name="share">Share</string>
    <string name="screen_orientation">Screen orientation in game</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="music_type">Type of Music</string>
    <string name="symphonic">Symphonic</string>
    <string name="metal">Death Metal</string>
    <string name="hint_carousel">Swipe right</string>
    <string name="choose_hero_message">Choose a Hero</string>
    <string name="hero_name_input">Enter your hero name...</string>
    <string name="buy_hero">Buy the %s</string>
    <string name="buy_all_heroes">Buy all 5 Heroes\n(30% discount\u00A0!)</string>
    <string name="buy_reminder"><i>(by buying a hero, you will fill my fridge with one more beer)</i></string>
    <string name="unblock_hero">Get 3 stars at all the quests with the %s\n\nor</string>
    <string name="choose_book_message">Choose a Quest</string>
    <string name="ask_tutorial">It is recommended to do the tutorial in order to know how to play\u00A0!\nWould you like to do it now\u00A0?</string>
    <string name="visit_shop">Visit the Shop</string>
    <string name="shop">Shop</string>
    <string name="bestiary">Bestiary</string>
    <string name="enter_quest">Enter Quest</string>
    <string name="congratulations_unlock">Congratulations\u00A0!\n\nYou have unlocked\nthe %s !</string>
    <string name="congratulations_finish_game">Congratulations\u00A0!\n\nYou have finished the game with all the characters !\n\nThe village of Gundin is now safe and your name will be reminded for decades there.\nSee you at the next episode for new epic adventures, and thanks for playing %s\u00A0!</string>
    <string name="bestiary_header">My trophees\u00A0!</string>
    <string name="skip">Skip</string>
    <string name="replay">Replay</string>
    <string name="retry">Retry floor</string>
    <string name="exit">Exit</string>
    <string name="game_over_title">Game Over</string>
    <string name="shop_intro_port">Hey adventurer, welcome to the Easy Dungeon shop\u00A0!\n\nHere are today\'s offers.</string>
    <string name="shop_intro">Hey adventurer, welcome to the Easy Dungeon shop\u00A0! Here are today\'s offers.</string>
    <string name="shop_outro">Have a good death..euh day\u00A0!</string>
    <string name="your_bag">Your Bag</string>
    <string name="buy_item_for">Buy item for %s gold coins</string>
    <string name="sell_item_for">Sell item for %s gold coins</string>
    <string name="transaction_confirmation">Are you sure you want to %1$s %2$s\u00A0?</string>
    <string name="merchant">Merchant</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="hp">Health points</string>
    <string name="strength">Strength : used to deal damages, equip heavy items</string>
    <string name="dexterity">Dexterity : used to dodge, react, aim</string>
    <string name="spirit">Spirit : used to react, focus, gain skills</string>
    <string name="frags">Frags</string>
    <string name="loading_game">Loading</string>
    <string name="loading_dots">. . .</string>
    <string name="game_paused">Pause</string>
    <string name="resume_game">Resume Game</string>
    <string name="leave_quest">Leave Quest</string>
    <string name="confirm_leave_quest">Are you sure you want to leave this quest\u00A0?\n\n<i>(you will come back to the adventure screen)</i></string>
    <string name="confirm_finish_quest">Are you sure you want to finish this quest and leave the dungeon\u00A0?</string>
    <string name="go_deeper_dungeon">Are you sure you want to leave this floor and go deeper into the dungeon\u00A0?</string>
    <string name="riddle_answer_input">your answer...</string>
    <string name="game_master">Game Master</string>
    <string name="new_level_title">You reached level %s\u00A0!</string>
    <string name="new_level_text">Choose which skills to improve\u00A0:</string>
    <string name="new_level_points_left">Skill points left : %s</string>
    <string name="improve_skill">Improve skill</string>
    <string name="level_in_game">Level %1$s (%2$s/%3$s)</string>
    <string name="hp_in_game">%1$s / %2$s</string>
    <string name="found_nothing">You found nothing\u00A0!</string>
    <string name="found_item_a">You got a %s\u00A0!</string>
    <string name="found_item_an">You got an %s\u00A0!</string>
    <string name="found_gold">You got %s Gold Coins\u00A0!</string>
    <string name="reward_xp">You were rewarded with %s XP\u00A0!</string>
    <string name="close">Close</string>
    <string name="use">Use</string>
    <string name="equip">Equip</string>
    <string name="unequip">Remove</string>
    <string name="drop">Drop</string>
    <string name="gold_coins">Gold Coins</string>
    <string name="bag_full">Your bag is full, the %s has been dropped on the ground</string>
    <string name="damage">Damage</string>
    <string name="protection">Armor</string>
    <string name="dodge">Dodge</string>
    <string name="movement">Movement</string>
    <string name="initiative">Initiative</string>
    <string name="critical">Critical Hit</string>
    <string name="block">Parry</string>
    <string name="minimum">min. %s </string>
    <string name="exit_stairs">Exit Stairs</string>
    <string name="entrance_stairs">Entrance Stairs</string>
    <string name="go_to_next_floor">Go to next floor</string>
    <string name="finish_quest">Finish the quest</string>
    <string name="use_skill_on">preparing %s...</string>
    <string name="use_skill_off">cancel %s</string>
    <string name="secondary_stats">Secondary stats</string>
    <string name="skills">Skills</string>
    <string name="use_skill_personal">%s\u00A0!</string>
    <string name="drink">Drink</string>
    <string name="sleep_effect">zzz</string>
    <string name="chance_stun">Bonus to stun target</string>
    <string name="two_handed">Two-handed</string>
    <string name="two_handed_description">Both hands are needed to use this item</string>
    <string name="thing_name_with_level">%1$s (lvl %2$s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discussion_is_over">I don\'t want to talk to you anymore.</string>
    <string name="ok">Ok</string>
    <string name="berserker">Berserker</string>
    <string name="dwarf_warrior">Dwarf Warrior</string>
    <string name="elf_ranger">Elf Ranger</string>
    <string name="wizard">Wizard</string>
    <string name="thief">Thief</string>
    <string name="druid">Druid</string>
    <string name="berserker_description">You are the Berserker, a fearless tribal warrior fighting his foes with rage and fury.</string>
    <string name="dwarf_warrior_description">You are the Dwarf Warrior, a tough close-combat fighter but weak against magic.</string>
    <string name="elf_ranger_description">You are the Elf Ranger, a versatile adventurer with range attack skills as well as magical abilities.</string>
    <string name="wizard_description">You are the Wizard, a great sorcerer specialized in offensive spells. Be sure to keep your distance during fights though.</string>
    <string name="thief_description">You are the Thief, a silent but deadly adventurer who can hide herself from her enemies.</string>
    <string name="druid_description">You are the Druid, a strong spell caster who uses her knowledge of natural energies to defeat her foes.</string>
    <string name="light">Candelabra</string>
    <string name="treasure_chest">Treasure Chest</string>
    <string name="table">Table</string>
    <string name="pot">Container</string>
    <string name="small_chest">Small Chest</string>
    <string name="statue">Statue</string>
    <string name="goblin">Goblin</string>
    <string name="orc">Orc</string>
    <string name="orc_captain">Orc Captain</string>
    <string name="troll">Troll</string>
    <string name="ogre">Ogre</string>
    <string name="ogre_king">Ogre King</string>
    <string name="chaos_warrior">Chaos Warrior</string>
    <string name="tutorial">Tutorial</string>
</resources>