<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical">

    <com.glevel.dungeonhero.views.CustomTextView
        android:id="@+id/message"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:padding="20dp"
        android:text="@string/rate_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.glevel.dungeonhero.views.CustomButton
            android:id="@+id/cancelButton"
            style="@style/AlertDialogButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/rate_dont_want" />

        <com.glevel.dungeonhero.views.CustomButton
            android:id="@+id/neutralButton"
            style="@style/AlertDialogButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/rate_later" />

        <com.glevel.dungeonhero.views.CustomButton
            android:id="@+id/okButton"
            style="@style/AlertDialogButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/rate_now" />
    </LinearLayout>

</LinearLayout>