<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/storms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_village"
        android:tint="#cc000000" />


    <ImageView
        android:id="@+id/grave"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:alpha="0.3"
        android:src="@drawable/ic_death" />

    <com.glevel.dungeonhero.views.CustomTitle
        android:id="@+id/title"
        style="@style/GameOverTitle"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_title" />

    <LinearLayout
        android:layout_below="@+id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

        <com.glevel.dungeonhero.views.CustomButton
            android:id="@+id/retryButton"
            style="@style/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/retry"
            android:layout_marginRight="80dp" />

        <com.glevel.dungeonhero.views.CustomButton
            android:id="@+id/exitButton"
            style="@style/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title"
            android:text="@string/exit" />
    </LinearLayout>
</RelativeLayout>